feat: us-6 update package
